syntax = "proto3";
package littlehorse;

option java_multiple_files = true;
option java_package = "io.littlehorse.canary.proto";

import "google/protobuf/timestamp.proto";

message Metric {
  Metadata metadata = 1;
  oneof metric {
    DuplicatedTaskRun duplicated_task_run = 2;
    TaskRunLatency task_run_latency = 3;
    StreamTopologyFailure stream_topology_failure= 9;
  }
}

message Metadata {
  google.protobuf.Timestamp time = 1;
  string server_host = 2;
  int32 server_port = 3;
  string server_version = 4;
}

message DuplicatedTaskRun {
  string unique_task_schedule_id = 1;
}

message TaskRunLatency {
  int64 latency = 1;
}

message StreamTopologyFailure {
  string message = 1;
}
